--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <title>Trivia Game</title>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <title>Totally Trivial Trivia</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
-        <h1 id="title">Totally Trivial Trivia</h1>
-        <button id ="start">Start</button>
-<script type= "text/javascript" src="assets/javascript/app.js"></script>
+<div id="wrapper">
+    <h1 id="title">Totally Trivial Trivia</h1>
+    <div id = "subwrapper">
+    <button id="start" >Start</button>
+        </div>
+    </div>
+   <script type="text/javascript" src="assets/javascript/app.js"></script>
+
 </body>
 </html>
 
