--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <h1 id="title">Totally Trivial Trivia</h1>
     <div id = "subwrapper">
     <button id="start" >Start</button>
+        <div id="question"></div>
         </div>
     </div>
    <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 </html>
-
-
